# cmd-item

./: README.md  cmd-item.cabal
src/Data/: CmdItem.hs
test/Data/: CmdItemSpec.hs
