name:                cmd-item
version:             1.0.0
synopsis:            Library to compose and reuse command line fragments
-- description:
homepage:            https://github.com/geraud/cmd-item
license:             MIT
license-file:        LICENSE
author:              Geraud Boyer
maintainer:          geraud@gmail.com
-- copyright:
category:            System
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
tested-with:
  GHC == 7.8
  , GHC == 7.10

library
  exposed-modules:     Data.CmdItem
  -- other-modules:
  -- other-extensions:
  build-depends:
    base >=4.5 && <4.9
    , containers >= 0.5
    , text >= 1.1
    , templater >= 0
  hs-source-dirs: src
  default-language:    Haskell2010

test-suite tests
  main-is: Spec.hs
  build-depends:
    base
    , cmd-item
    , hspec == 2.*
    , hspec-laws
    , HUnit
    , QuickCheck
    , quickcheck-instances
    , text
  default-language:
    Haskell2010
  ghc-options:
    -Wall
    -Werror
  hs-source-dirs:
    test
  type:
    exitcode-stdio-1.0
